Changelog
=========

1.1a2 - unreleased
------------------


1.1a1 - 2009-04-04
------------------

- Removed the negotiator sub-package, as it hasn't been enabled or used yet.
  The functionality is better placed as a WSGI-middleware.
  [hannosch]

- Register all dependencies in setup.py. Move test dependencies into a
  separate extra to keep the dependencies low so things like the normalizer
  can be used in non-zope contexts.
  [wichert]

- Added bulgarian normalizer.
  [vlado]


1.0.7 - November 5, 2008
------------------------

- Allow _ as a valid character in file names and URLs. Do not remove # from
  file names. It only has a special meaning for URLs.
  [hannosch, sidnei]


1.0.6 - August 18, 2008
-----------------------

- Added normalization for a French-only character (igature of o and e)
  which isn't part of ISO 8859-1. This closes
  http://dev.plone.org/plone/ticket/7512.
  [dbaty, hannosch]

- Fixed the greek character normalization based on a patch by ggozad.
  This closes http://dev.plone.org/plone/ticket/8308.
  [hannosch]

- Changed the default normalization of characters used in Scandinavian
  languages to meet the most common rules. This is based on a discussion
  with translators from all Scandinavian countries.
  [hannosch]

- Added a subdomain language negotiator (e.g. de.plone.org).
  [stefan]


1.0.5 - May 22, 2008
--------------------

- Added a new max_length argument to the normalize method. This allows you
  to override the default values for the maximum length on a call basis.
  [hannosch, fschulze]

- Added a new MAX_URL_LENGTH constant used by the URL normalizer. It
  defaults to 255.
  [hannosch]

- Added '`' to the list of dangerous chars, which will be removed by the
  url and be replaced with a dash by the file name normalizer now.
  [hannosch, mj]

1.0.4 - April 19, 2008
----------------------

- If a dot was used in a url, the url was not lowercased. This closes
  http://dev.plone.org/plone/ticket/7961.
  [hannosch]

