@@ -427,13 +427,13 @@ u'nl-aw' : {u'name' : 'Dutch (Aruba)',                                          
 u'nl-be' : {u'name' : 'Dutch (Belgium)',                                        u'flag' : u'/++resource++country-flags/be.gif'},
 u'nl-nl' : {u'name' : 'Dutch (Netherlands)',                                    u'flag' : u'/++resource++country-flags/nl.gif'},
 u'nl-sr' : {u'name' : 'Dutch (Suriname)',                                       u'flag' : u'/++resource++country-flags/sr.gif'},
-u'pt-ao' : {u'name' : 'Portuguese (Angola)',                                    u'flag' : u'/++resource++country-flags/ao.gif'},
+u'pt-ao' : {u'name' : 'Portuguese (Angola)', u'native': 'Português (Angola)',   u'flag' : u'/++resource++country-flags/ao.gif'},
 u'pt-br' : {u'name' : 'Portuguese (Brazil)', u'native' : 'Português (Brasil)',  u'flag' : u'/++resource++country-flags/br.gif'},
-u'pt-cv' : {u'name' : 'Portuguese (Ilhas Cabo Verde)',                           u'flag' : u'/++resource++country-flags/cv.gif'},
-u'pt-gw' : {u'name' : 'Portuguese (Guiné-Bissau)',                               u'flag' : u'/++resource++country-flags/gw.gif'},
-u'pt-mz' : {u'name' : 'Portuguese (Moçambique)',                                 u'flag' : u'/++resource++country-flags/mz.gif'},
-u'pt-pt' : {u'name' : 'Portuguese (Portugal)',                                   u'flag' : u'/++resource++country-flags/pt.gif'},
-u'pt-st' : {u'name' : 'Portuguese (São Tomé e Príncipe)',                        u'flag' : u'/++resource++country-flags/st.gif'},
+u'pt-cv' : {u'name' : 'Portuguese (Ilhas Cabo Verde)', u'native': 'Português (Cabo Verde)', u'flag' : u'/++resource++country-flags/cv.gif'},
+u'pt-gw' : {u'name' : 'Portuguese (Guiné-Bissau)', u'native': 'Português (Guiné-Bissau)', u'flag' : u'/++resource++country-flags/gw.gif'},
+u'pt-mz' : {u'name' : 'Portuguese (Moçambique)', u'native': 'Português (Moçambique)', u'flag' : u'/++resource++country-flags/mz.gif'},
+u'pt-pt' : {u'name' : 'Portuguese (Portugal)', u'native': 'Português (Portugal)', u'flag' : u'/++resource++country-flags/pt.gif'},
+u'pt-st' : {u'name' : 'Portuguese (São Tomé e Príncipe)', u'native': 'Português (São Tomé e Príncipe)', u'flag' : u'/++resource++country-flags/st.gif'},
 u'sd-in' : {u'name' : 'Sindhi (India)',                                         u'flag' : u'/++resource++country-flags/in.gif'},
 u'sd-pk' : {u'name' : 'Sindhi (Pakistan)',                                      u'flag' : u'/++resource++country-flags/pk.gif'},
 u'sr-ba' : {u'name' : 'Serbian (Bosnia-Herzegovina)',                           u'flag' : u'/++resource++country-flags/ba.gif'},
